<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/ripple_custom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    card_view:cardElevation="3sp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:background="@color/textColorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_team_layout"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/team_logo_desc"
            android:id="@+id/team_logo"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:adjustViewBounds="true"
            android:transitionName="TeamImage"
            android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceLarge"/>
            <LinearLayout
                android:layout_marginLeft="@dimen/team_margin_left"
                android:layout_marginTop="@dimen/team_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/team_owner"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/teamOwnerName"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="@dimen/team_margin_left"
                android:layout_marginTop="@dimen/team_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/team_coach"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/coachName"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="@dimen/team_margin_left"
                android:layout_marginTop="@dimen/team_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/team_captain"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/captianName"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="@dimen/team_margin_left"
                android:layout_marginTop="@dimen/team_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/team_venue"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/venueName"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>


</android.support.v7.widget.CardView>
